# Qml-MenuOrder

SolutionProject/: attribution.txt
StartingProject/: CMakeLists.txt  DishItem.qml  Main.qml  MenuCategory.qml  MenuItem.qml  MenuPage.qml  orderUtils.js  util.js
